# FLExo

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: package.yml  requirements.txt
flexo/: cli.py
flexo/crf/: model.pkl  model.pkl.md5
flexo/hmmer/: Pfam.ini
flexo/types/: compositions.npz  domains.tsv  types.tsv
